--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,4 +11,133 @@ html {
   --primary-color: #306bb3;
   --text-white: #fff;
   --text-black: #1a202c;
+  --font-size-500: 500;
+  --font-size-600: 600;
+  --font-size-800: 800;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  background-color: var(--primary-color);
+  justify-content: space-between;
+  height: 10vh;
+  width: 100vw;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 30%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.container-nav-ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-white);
+  font-size: 500;
+}
+
+li {
+  color: var(--text-white);
+}
+
+button {
+  border-radius: 5px;
+  background-color: var(--text-white);
+  width: 82px;
+  height: 38px;
+  border: none;
+  color: var(--primary-color);
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100vw;
+  height: 62vh;
+  padding-top: 10vh;
+}
+
+section {
+  width: 50%;
+  font-size: 500;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.container-links {
+  display: flex;
+  gap: 20px;
+  font-weight: bold;
+}
+
+.container-links a {
+  color: black;
+}
+
+.img-ash {
+  width: 30vw;
+  height: 40vh;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5%;
+  background-color: var(--primary-color);
+}
+
+footer p {
+  color: var(--text-white);
+  width: 30vw;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+
+.icons li {
+  margin: 5%;
+}
+
+.container-ab-com-soc {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+}
+
+.title {
+  color: #fff;
+  font-size: 600;
+  font-weight: thin;
+  padding-bottom: 20px;
+}
+
+.container-ab-com-soc ul {
+  list-style: none;
+}
+
+.container-ab-com-soc div {
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+}
+
+.container-ab-com-soc li {
+  justify-content: flex-start;
+  padding: 3px;
 }
