--- a/styles/buyCard.css
+++ b/styles/buyCard.css
@@ -216,7 +216,7 @@ p {
 
 .container-pokemons {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .btn-cards {
@@ -318,6 +318,11 @@ footer p {
 .links li.title {
   text-align: left;
   margin: 1rem;
+}
+
+.loader {
+  display: block;
+  margin: auto;
 }
 @media screen and (min-width: 1024px) {
   .header {
